parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> START LPAREN RPAREN bloque
Rule 2     declaracion -> vars
Rule 3     declaracion -> epsilon
Rule 4     vars -> VAR var
Rule 5     vars -> vars vars
Rule 6     var -> vardef COLON tipo SEMICOLON
Rule 7     vardef -> ID
Rule 8     vardef -> vardef COMA vardef
Rule 9     tipo -> INT
Rule 10    tipo -> FLOAT
Rule 11    tipo -> BOOL
Rule 12    tipo -> STRING
Rule 13    lista -> ID
Rule 14    lista -> ID COMA
Rule 15    arreglo -> LBRACKET lista RBRACKET
Rule 16    bloque -> LCURLY declaracion estatutoExp RCURLY
Rule 17    estatutoExp -> estatuto SEMICOLON
Rule 18    estatutoExp -> estatutoExp estatutoExp
Rule 19    estatuto -> asignacion
Rule 20    estatuto -> condicion
Rule 21    estatuto -> whileLoop
Rule 22    estatuto -> forLoop
Rule 23    estatuto -> escritura
Rule 24    estatuto -> funcion
Rule 25    estatuto -> returnexp
Rule 26    returnexp -> RETURN expresion
Rule 27    asignacion -> ID EQUAL expresion
Rule 28    escritura -> PRINT LPAREN escrito RPAREN
Rule 29    escrito -> impr
Rule 30    escrito -> impr COMA impr
Rule 31    impr -> STRING
Rule 32    impr -> expresion
Rule 33    expresion -> exp
Rule 34    expresion -> comparacion exp
Rule 35    expresion -> AND exp
Rule 36    expresion -> OR exp
Rule 37    expresion -> exp expresion
Rule 38    expresion -> arreglo
Rule 39    comparacion -> LESSTHAN
Rule 40    comparacion -> MORETHAN
Rule 41    comparacion -> NOTEQUAL
Rule 42    whileLoop -> WHILE LPAREN expresion RPAREN bloque
Rule 43    forLoop -> FOR LPAREN vars expresion SEMICOLON expresion RPAREN bloque
Rule 44    condicion -> IF LPAREN expresion RPAREN bloque condicionelse
Rule 45    condicionelse -> ELSE bloque
Rule 46    condicionelse -> epsilon
Rule 47    tiposreturn -> tipo
Rule 48    tiposreturn -> VOID
Rule 49    funcion -> FUNCTION ID LPAREN argumentos RPAREN COLON tiposreturn bloque
Rule 50    argumentos -> args
Rule 51    argumentos -> epsilon
Rule 52    args -> ID COLON tipo
Rule 53    args -> args COMA args
Rule 54    exp -> termino
Rule 55    exp -> termino signo
Rule 56    signo -> PLUS
Rule 57    signo -> MINUS
Rule 58    termino -> factor
Rule 59    termino -> factor operacion
Rule 60    operacion -> TIMES exp
Rule 61    operacion -> DIVIDE exp
Rule 62    operacion -> DIFF exp
Rule 63    operacion -> EXP exp
Rule 64    factor -> LPAREN expresion RPAREN
Rule 65    factor -> varcte
Rule 66    factor -> signo varcte
Rule 67    epsilon -> <empty>
Rule 68    varcte -> ID
Rule 69    varcte -> CTEL
Rule 70    varcte -> CTEF

Terminals, with rules where they appear

AND                  : 35
BOOL                 : 11
COLON                : 6 49 52
COMA                 : 8 14 30 53
CTEF                 : 70
CTEL                 : 69
DIFF                 : 62
DIVIDE               : 61
ELSE                 : 45
EQUAL                : 27
EXP                  : 63
FLOAT                : 10
FOR                  : 43
FUNCTION             : 49
ID                   : 7 13 14 27 49 52 68
IF                   : 44
INT                  : 9
LBRACKET             : 15
LCURLY               : 16
LESSTHAN             : 39
LPAREN               : 1 28 42 43 44 49 64
MINUS                : 57
MORETHAN             : 40
NOTEQUAL             : 41
OR                   : 36
PLUS                 : 56
PRINT                : 28
RBRACKET             : 15
RCURLY               : 16
RETURN               : 26
RPAREN               : 1 28 42 43 44 49 64
SEMICOLON            : 6 17 43
START                : 1
STRING               : 12 31
TIMES                : 60
VAR                  : 4
VOID                 : 48
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

args                 : 50 53 53
argumentos           : 49
arreglo              : 38
asignacion           : 19
bloque               : 1 42 43 44 45 49
comparacion          : 34
condicion            : 20
condicionelse        : 44
declaracion          : 16
epsilon              : 3 46 51
escrito              : 28
escritura            : 23
estatuto             : 17
estatutoExp          : 16 18 18
exp                  : 33 34 35 36 37 60 61 62 63
expresion            : 26 27 32 37 42 43 43 44 64
factor               : 58 59
forLoop              : 22
funcion              : 24
impr                 : 29 30 30
lista                : 15
operacion            : 59
programa             : 0
returnexp            : 25
signo                : 55 66
termino              : 54 55
tipo                 : 6 47 52
tiposreturn          : 49
var                  : 4
varcte               : 65 66
vardef               : 6 8 8
vars                 : 2 5 5 43
whileLoop            : 21

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . START LPAREN RPAREN bloque

    START           shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> START . LPAREN RPAREN bloque

    LPAREN          shift and go to state 3


state 3

    (1) programa -> START LPAREN . RPAREN bloque

    RPAREN          shift and go to state 4


state 4

    (1) programa -> START LPAREN RPAREN . bloque
    (16) bloque -> . LCURLY declaracion estatutoExp RCURLY

    LCURLY          shift and go to state 6

    bloque                         shift and go to state 5

state 5

    (1) programa -> START LPAREN RPAREN bloque .

    $end            reduce using rule 1 (programa -> START LPAREN RPAREN bloque .)


state 6

    (16) bloque -> LCURLY . declaracion estatutoExp RCURLY
    (2) declaracion -> . vars
    (3) declaracion -> . epsilon
    (4) vars -> . VAR var
    (5) vars -> . vars vars
    (67) epsilon -> .

    VAR             shift and go to state 10
    ID              reduce using rule 67 (epsilon -> .)
    IF              reduce using rule 67 (epsilon -> .)
    WHILE           reduce using rule 67 (epsilon -> .)
    FOR             reduce using rule 67 (epsilon -> .)
    PRINT           reduce using rule 67 (epsilon -> .)
    FUNCTION        reduce using rule 67 (epsilon -> .)
    RETURN          reduce using rule 67 (epsilon -> .)

    declaracion                    shift and go to state 7
    vars                           shift and go to state 8
    epsilon                        shift and go to state 9

state 7

    (16) bloque -> LCURLY declaracion . estatutoExp RCURLY
    (17) estatutoExp -> . estatuto SEMICOLON
    (18) estatutoExp -> . estatutoExp estatutoExp
    (19) estatuto -> . asignacion
    (20) estatuto -> . condicion
    (21) estatuto -> . whileLoop
    (22) estatuto -> . forLoop
    (23) estatuto -> . escritura
    (24) estatuto -> . funcion
    (25) estatuto -> . returnexp
    (27) asignacion -> . ID EQUAL expresion
    (44) condicion -> . IF LPAREN expresion RPAREN bloque condicionelse
    (42) whileLoop -> . WHILE LPAREN expresion RPAREN bloque
    (43) forLoop -> . FOR LPAREN vars expresion SEMICOLON expresion RPAREN bloque
    (28) escritura -> . PRINT LPAREN escrito RPAREN
    (49) funcion -> . FUNCTION ID LPAREN argumentos RPAREN COLON tiposreturn bloque
    (26) returnexp -> . RETURN expresion

    ID              shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    PRINT           shift and go to state 24
    FUNCTION        shift and go to state 25
    RETURN          shift and go to state 26

    estatutoExp                    shift and go to state 11
    estatuto                       shift and go to state 12
    asignacion                     shift and go to state 13
    condicion                      shift and go to state 14
    whileLoop                      shift and go to state 15
    forLoop                        shift and go to state 16
    escritura                      shift and go to state 17
    funcion                        shift and go to state 18
    returnexp                      shift and go to state 19

state 8

    (2) declaracion -> vars .
    (5) vars -> vars . vars
    (4) vars -> . VAR var
    (5) vars -> . vars vars

    ID              reduce using rule 2 (declaracion -> vars .)
    IF              reduce using rule 2 (declaracion -> vars .)
    WHILE           reduce using rule 2 (declaracion -> vars .)
    FOR             reduce using rule 2 (declaracion -> vars .)
    PRINT           reduce using rule 2 (declaracion -> vars .)
    FUNCTION        reduce using rule 2 (declaracion -> vars .)
    RETURN          reduce using rule 2 (declaracion -> vars .)
    VAR             shift and go to state 10

    vars                           shift and go to state 27

state 9

    (3) declaracion -> epsilon .

    ID              reduce using rule 3 (declaracion -> epsilon .)
    IF              reduce using rule 3 (declaracion -> epsilon .)
    WHILE           reduce using rule 3 (declaracion -> epsilon .)
    FOR             reduce using rule 3 (declaracion -> epsilon .)
    PRINT           reduce using rule 3 (declaracion -> epsilon .)
    FUNCTION        reduce using rule 3 (declaracion -> epsilon .)
    RETURN          reduce using rule 3 (declaracion -> epsilon .)


state 10

    (4) vars -> VAR . var
    (6) var -> . vardef COLON tipo SEMICOLON
    (7) vardef -> . ID
    (8) vardef -> . vardef COMA vardef

    ID              shift and go to state 30

    var                            shift and go to state 28
    vardef                         shift and go to state 29

state 11

    (16) bloque -> LCURLY declaracion estatutoExp . RCURLY
    (18) estatutoExp -> estatutoExp . estatutoExp
    (17) estatutoExp -> . estatuto SEMICOLON
    (18) estatutoExp -> . estatutoExp estatutoExp
    (19) estatuto -> . asignacion
    (20) estatuto -> . condicion
    (21) estatuto -> . whileLoop
    (22) estatuto -> . forLoop
    (23) estatuto -> . escritura
    (24) estatuto -> . funcion
    (25) estatuto -> . returnexp
    (27) asignacion -> . ID EQUAL expresion
    (44) condicion -> . IF LPAREN expresion RPAREN bloque condicionelse
    (42) whileLoop -> . WHILE LPAREN expresion RPAREN bloque
    (43) forLoop -> . FOR LPAREN vars expresion SEMICOLON expresion RPAREN bloque
    (28) escritura -> . PRINT LPAREN escrito RPAREN
    (49) funcion -> . FUNCTION ID LPAREN argumentos RPAREN COLON tiposreturn bloque
    (26) returnexp -> . RETURN expresion

    RCURLY          shift and go to state 32
    ID              shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    PRINT           shift and go to state 24
    FUNCTION        shift and go to state 25
    RETURN          shift and go to state 26

    estatutoExp                    shift and go to state 31
    estatuto                       shift and go to state 12
    asignacion                     shift and go to state 13
    condicion                      shift and go to state 14
    whileLoop                      shift and go to state 15
    forLoop                        shift and go to state 16
    escritura                      shift and go to state 17
    funcion                        shift and go to state 18
    returnexp                      shift and go to state 19

state 12

    (17) estatutoExp -> estatuto . SEMICOLON

    SEMICOLON       shift and go to state 33


state 13

    (19) estatuto -> asignacion .

    SEMICOLON       reduce using rule 19 (estatuto -> asignacion .)


state 14

    (20) estatuto -> condicion .

    SEMICOLON       reduce using rule 20 (estatuto -> condicion .)


state 15

    (21) estatuto -> whileLoop .

    SEMICOLON       reduce using rule 21 (estatuto -> whileLoop .)


state 16

    (22) estatuto -> forLoop .

    SEMICOLON       reduce using rule 22 (estatuto -> forLoop .)


state 17

    (23) estatuto -> escritura .

    SEMICOLON       reduce using rule 23 (estatuto -> escritura .)


state 18

    (24) estatuto -> funcion .

    SEMICOLON       reduce using rule 24 (estatuto -> funcion .)


state 19

    (25) estatuto -> returnexp .

    SEMICOLON       reduce using rule 25 (estatuto -> returnexp .)


state 20

    (27) asignacion -> ID . EQUAL expresion

    EQUAL           shift and go to state 34


state 21

    (44) condicion -> IF . LPAREN expresion RPAREN bloque condicionelse

    LPAREN          shift and go to state 35


state 22

    (42) whileLoop -> WHILE . LPAREN expresion RPAREN bloque

    LPAREN          shift and go to state 36


state 23

    (43) forLoop -> FOR . LPAREN vars expresion SEMICOLON expresion RPAREN bloque

    LPAREN          shift and go to state 37


state 24

    (28) escritura -> PRINT . LPAREN escrito RPAREN

    LPAREN          shift and go to state 38


state 25

    (49) funcion -> FUNCTION . ID LPAREN argumentos RPAREN COLON tiposreturn bloque

    ID              shift and go to state 39


state 26

    (26) returnexp -> RETURN . expresion
    (33) expresion -> . exp
    (34) expresion -> . comparacion exp
    (35) expresion -> . AND exp
    (36) expresion -> . OR exp
    (37) expresion -> . exp expresion
    (38) expresion -> . arreglo
    (54) exp -> . termino
    (55) exp -> . termino signo
    (39) comparacion -> . LESSTHAN
    (40) comparacion -> . MORETHAN
    (41) comparacion -> . NOTEQUAL
    (15) arreglo -> . LBRACKET lista RBRACKET
    (58) termino -> . factor
    (59) termino -> . factor operacion
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . varcte
    (66) factor -> . signo varcte
    (68) varcte -> . ID
    (69) varcte -> . CTEL
    (70) varcte -> . CTEF
    (56) signo -> . PLUS
    (57) signo -> . MINUS

    AND             shift and go to state 43
    OR              shift and go to state 44
    LESSTHAN        shift and go to state 48
    MORETHAN        shift and go to state 49
    NOTEQUAL        shift and go to state 50
    LBRACKET        shift and go to state 51
    LPAREN          shift and go to state 53
    ID              shift and go to state 55
    CTEL            shift and go to state 56
    CTEF            shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59

    expresion                      shift and go to state 40
    exp                            shift and go to state 41
    comparacion                    shift and go to state 42
    arreglo                        shift and go to state 45
    termino                        shift and go to state 46
    signo                          shift and go to state 47
    factor                         shift and go to state 52
    varcte                         shift and go to state 54

state 27

    (5) vars -> vars vars .
    (5) vars -> vars . vars
    (4) vars -> . VAR var
    (5) vars -> . vars vars

  ! shift/reduce conflict for VAR resolved as shift
    ID              reduce using rule 5 (vars -> vars vars .)
    IF              reduce using rule 5 (vars -> vars vars .)
    WHILE           reduce using rule 5 (vars -> vars vars .)
    FOR             reduce using rule 5 (vars -> vars vars .)
    PRINT           reduce using rule 5 (vars -> vars vars .)
    FUNCTION        reduce using rule 5 (vars -> vars vars .)
    RETURN          reduce using rule 5 (vars -> vars vars .)
    AND             reduce using rule 5 (vars -> vars vars .)
    OR              reduce using rule 5 (vars -> vars vars .)
    LESSTHAN        reduce using rule 5 (vars -> vars vars .)
    MORETHAN        reduce using rule 5 (vars -> vars vars .)
    NOTEQUAL        reduce using rule 5 (vars -> vars vars .)
    LBRACKET        reduce using rule 5 (vars -> vars vars .)
    LPAREN          reduce using rule 5 (vars -> vars vars .)
    CTEL            reduce using rule 5 (vars -> vars vars .)
    CTEF            reduce using rule 5 (vars -> vars vars .)
    PLUS            reduce using rule 5 (vars -> vars vars .)
    MINUS           reduce using rule 5 (vars -> vars vars .)
    VAR             shift and go to state 10

  ! VAR             [ reduce using rule 5 (vars -> vars vars .) ]

    vars                           shift and go to state 27

state 28

    (4) vars -> VAR var .

    VAR             reduce using rule 4 (vars -> VAR var .)
    ID              reduce using rule 4 (vars -> VAR var .)
    IF              reduce using rule 4 (vars -> VAR var .)
    WHILE           reduce using rule 4 (vars -> VAR var .)
    FOR             reduce using rule 4 (vars -> VAR var .)
    PRINT           reduce using rule 4 (vars -> VAR var .)
    FUNCTION        reduce using rule 4 (vars -> VAR var .)
    RETURN          reduce using rule 4 (vars -> VAR var .)
    AND             reduce using rule 4 (vars -> VAR var .)
    OR              reduce using rule 4 (vars -> VAR var .)
    LESSTHAN        reduce using rule 4 (vars -> VAR var .)
    MORETHAN        reduce using rule 4 (vars -> VAR var .)
    NOTEQUAL        reduce using rule 4 (vars -> VAR var .)
    LBRACKET        reduce using rule 4 (vars -> VAR var .)
    LPAREN          reduce using rule 4 (vars -> VAR var .)
    CTEL            reduce using rule 4 (vars -> VAR var .)
    CTEF            reduce using rule 4 (vars -> VAR var .)
    PLUS            reduce using rule 4 (vars -> VAR var .)
    MINUS           reduce using rule 4 (vars -> VAR var .)


state 29

    (6) var -> vardef . COLON tipo SEMICOLON
    (8) vardef -> vardef . COMA vardef

    COLON           shift and go to state 60
    COMA            shift and go to state 61


state 30

    (7) vardef -> ID .

    COLON           reduce using rule 7 (vardef -> ID .)
    COMA            reduce using rule 7 (vardef -> ID .)


state 31

    (18) estatutoExp -> estatutoExp estatutoExp .
    (18) estatutoExp -> estatutoExp . estatutoExp
    (17) estatutoExp -> . estatuto SEMICOLON
    (18) estatutoExp -> . estatutoExp estatutoExp
    (19) estatuto -> . asignacion
    (20) estatuto -> . condicion
    (21) estatuto -> . whileLoop
    (22) estatuto -> . forLoop
    (23) estatuto -> . escritura
    (24) estatuto -> . funcion
    (25) estatuto -> . returnexp
    (27) asignacion -> . ID EQUAL expresion
    (44) condicion -> . IF LPAREN expresion RPAREN bloque condicionelse
    (42) whileLoop -> . WHILE LPAREN expresion RPAREN bloque
    (43) forLoop -> . FOR LPAREN vars expresion SEMICOLON expresion RPAREN bloque
    (28) escritura -> . PRINT LPAREN escrito RPAREN
    (49) funcion -> . FUNCTION ID LPAREN argumentos RPAREN COLON tiposreturn bloque
    (26) returnexp -> . RETURN expresion

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    RCURLY          reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .)
    ID              shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    PRINT           shift and go to state 24
    FUNCTION        shift and go to state 25
    RETURN          shift and go to state 26

  ! ID              [ reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .) ]
  ! IF              [ reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .) ]
  ! WHILE           [ reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .) ]
  ! FOR             [ reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .) ]
  ! PRINT           [ reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .) ]
  ! FUNCTION        [ reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .) ]
  ! RETURN          [ reduce using rule 18 (estatutoExp -> estatutoExp estatutoExp .) ]

    estatutoExp                    shift and go to state 31
    estatuto                       shift and go to state 12
    asignacion                     shift and go to state 13
    condicion                      shift and go to state 14
    whileLoop                      shift and go to state 15
    forLoop                        shift and go to state 16
    escritura                      shift and go to state 17
    funcion                        shift and go to state 18
    returnexp                      shift and go to state 19

state 32

    (16) bloque -> LCURLY declaracion estatutoExp RCURLY .

    $end            reduce using rule 16 (bloque -> LCURLY declaracion estatutoExp RCURLY .)
    ELSE            reduce using rule 16 (bloque -> LCURLY declaracion estatutoExp RCURLY .)
    SEMICOLON       reduce using rule 16 (bloque -> LCURLY declaracion estatutoExp RCURLY .)


state 33

    (17) estatutoExp -> estatuto SEMICOLON .

    RCURLY          reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)
    ID              reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)
    IF              reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)
    WHILE           reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)
    FOR             reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)
    PRINT           reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)
    FUNCTION        reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)
    RETURN          reduce using rule 17 (estatutoExp -> estatuto SEMICOLON .)


state 34

    (27) asignacion -> ID EQUAL . expresion
    (33) expresion -> . exp
    (34) expresion -> . comparacion exp
    (35) expresion -> . AND exp
    (36) expresion -> . OR exp
    (37) expresion -> . exp expresion
    (38) expresion -> . arreglo
    (54) exp -> . termino
    (55) exp -> . termino signo
    (39) comparacion -> . LESSTHAN
    (40) comparacion -> . MORETHAN
    (41) comparacion -> . NOTEQUAL
    (15) arreglo -> . LBRACKET lista RBRACKET
    (58) termino -> . factor
    (59) termino -> . factor operacion
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . varcte
    (66) factor -> . signo varcte
    (68) varcte -> . ID
    (69) varcte -> . CTEL
    (70) varcte -> . CTEF
    (56) signo -> . PLUS
    (57) signo -> . MINUS

    AND             shift and go to state 43
    OR              shift and go to state 44
    LESSTHAN        shift and go to state 48
    MORETHAN        shift and go to state 49
    NOTEQUAL        shift and go to state 50
    LBRACKET        shift and go to state 51
    LPAREN          shift and go to state 53
    ID              shift and go to state 55
    CTEL            shift and go to state 56
    CTEF            shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59

    expresion                      shift and go to state 62
    exp                            shift and go to state 41
    comparacion                    shift and go to state 42
    arreglo                        shift and go to state 45
    termino                        shift and go to state 46
    signo                          shift and go to state 47
    factor                         shift and go to state 52
    varcte                         shift and go to state 54

state 35

    (44) condicion -> IF LPAREN . expresion RPAREN bloque condicionelse
    (33) expresion -> . exp
    (34) expresion -> . comparacion exp
    (35) expresion -> . AND exp
    (36) expresion -> . OR exp
    (37) expresion -> . exp expresion
    (38) expresion -> . arreglo
    (54) exp -> . termino
    (55) exp -> . termino signo
    (39) comparacion -> . LESSTHAN
    (40) comparacion -> . MORETHAN
    (41) comparacion -> . NOTEQUAL
    (15) arreglo -> . LBRACKET lista RBRACKET
    (58) termino -> . factor
    (59) termino -> . factor operacion
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . varcte
    (66) factor -> . signo varcte
    (68) varcte -> . ID
    (69) varcte -> . CTEL
    (70) varcte -> . CTEF
    (56) signo -> . PLUS
    (57) signo -> . MINUS

    AND             shift and go to state 43
    OR              shift and go to state 44
    LESSTHAN        shift and go to state 48
    MORETHAN        shift and go to state 49
    NOTEQUAL        shift and go to state 50
    LBRACKET        shift and go to state 51
    LPAREN          shift and go to state 53
    ID              shift and go to state 55
    CTEL            shift and go to state 56
    CTEF            shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59

    expresion                      shift and go to state 63
    exp                            shift and go to state 41
    comparacion                    shift and go to state 42
    arreglo                        shift and go to state 45
    termino                        shift and go to state 46
    signo                          shift and go to state 47
    factor                         shift and go to state 52
    varcte                         shift and go to state 54

state 36

    (42) whileLoop -> WHILE LPAREN . expresion RPAREN bloque
    (33) expresion -> . exp
    (34) expresion -> . comparacion exp
    (35) expresion -> . AND exp
    (36) expresion -> . OR exp
    (37) expresion -> . exp expresion
    (38) expresion -> . arreglo
    (54) exp -> . termino
    (55) exp -> . termino signo
    (39) comparacion -> . LESSTHAN
    (40) comparacion -> . MORETHAN
    (41) comparacion -> . NOTEQUAL
    (15) arreglo -> . LBRACKET lista RBRACKET
    (58) termino -> . factor
    (59) termino -> . factor operacion
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . varcte
    (66) factor -> . signo varcte
    (68) varcte -> . ID
    (69) varcte -> . CTEL
    (70) varcte -> . CTEF
    (56) signo -> . PLUS
    (57) signo -> . MINUS

    AND             shift and go to state 43
    OR              shift and go to state 44
    LESSTHAN        shift and go to state 48
    MORETHAN        shift and go to state 49
    NOTEQUAL        shift and go to state 50
    LBRACKET        shift and go to state 51
    LPAREN          shift and go to state 53
    ID              shift and go to state 55
    CTEL            shift and go to state 56
    CTEF            shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59

    expresion                      shift and go to state 64
    exp                            shift and go to state 41
    comparacion                    shift and go to state 42
    arreglo                        shift and go to state 45
    termino                        shift and go to state 46
    signo                          shift and go to state 47
    factor                         shift and go to state 52
    varcte                         shift and go to state 54

state 37

    (43) forLoop -> FOR LPAREN . vars expresion SEMICOLON expresion RPAREN bloque
    (4) vars -> . VAR var
    (5) vars -> . vars vars

    VAR             shift and go to state 10

    vars                           shift and go to state 65

state 38

    (28) escritura -> PRINT LPAREN . escrito RPAREN
    (29) escrito -> . impr
    (30) escrito -> . impr COMA impr
    (31) impr -> . STRING
    (32) impr -> . expresion
    (33) expresion -> . exp
    (34) expresion -> . comparacion exp
    (35) expresion -> . AND exp
    (36) expresion -> . OR exp
    (37) expresion -> . exp expresion
    (38) expresion -> . arreglo
    (54) exp -> . termino
    (55) exp -> . termino signo
    (39) comparacion -> . LESSTHAN
    (40) comparacion -> . MORETHAN
    (41) comparacion -> . NOTEQUAL
    (15) arreglo -> . LBRACKET lista RBRACKET
    (58) termino -> . factor
    (59) termino -> . factor operacion
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . varcte
    (66) factor -> . signo varcte
    (68) varcte -> . ID
    (69) varcte -> . CTEL
    (70) varcte -> . CTEF
    (56) signo -> . PLUS
    (57) signo -> . MINUS

    STRING          shift and go to state 68
    AND             shift and go to state 43
    OR              shift and go to state 44
    LESSTHAN        shift and go to state 48
    MORETHAN        shift and go to state 49
    NOTEQUAL        shift and go to state 50
    LBRACKET        shift and go to state 51
    LPAREN          shift and go to state 53
    ID              shift and go to state 55
    CTEL            shift and go to state 56
    CTEF            shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59

    escrito                        shift and go to state 66
    impr                           shift and go to state 67
    expresion                      shift and go to state 69
    exp                            shift and go to state 41
    comparacion                    shift and go to state 42
    arreglo                        shift and go to state 45
    termino                        shift and go to state 46
    signo                          shift and go to state 47
    factor                         shift and go to state 52
    varcte                         shift and go to state 54

state 39

    (49) funcion -> FUNCTION ID . LPAREN argumentos RPAREN COLON tiposreturn bloque

    LPAREN          shift and go to state 70


state 40

    (26) returnexp -> RETURN expresion .

    SEMICOLON       reduce using rule 26 (returnexp -> RETURN expresion .)


state 41

    (33) expresion -> exp .
    (37) expresion -> exp . expresion
    (33) expresion -> . exp
    (34) expresion -> . comparacion exp
    (35) expresion -> . AND exp
    (36) expresion -> . OR exp
    (37) expresion -> . exp expresion
    (38) expresion -> . arreglo
    (54) exp -> . termino
    (55) exp -> . termino signo
    (39) comparacion -> . LESSTHAN
    (40) comparacion -> . MORETHAN
    (41) comparacion -> . NOTEQUAL
    (15) arreglo -> . LBRACKET lista RBRACKET
    (58) termino -> . factor
    (59) termino -> . factor operacion
    (64) factor -> . LPAREN expresion RPAREN
    (65) factor -> . varcte
    (66) factor -> . signo varcte
    (68) varcte -> . ID
    (69) varcte -> . CTEL
    (70) varcte -> . CTEF
    (56) signo -> . PLUS
    (57) signo -> . MINUS

    SEMICOLON       reduce using rule 33 (expresion -> exp .)
    RPAREN          reduce using rule 33 (expresion -> exp .)
    COMA            reduce using rule 33 (expresion -> exp .)
    AND             shift and go to state 43
    OR              shift and go to state 44
    LESSTHAN        shift and go to state 48
    MORETHAN        shift and go to state 49
    NOTEQUAL        shift and go to state 50
    LBRACKET        shift and go to state 51
    LPAREN          shift and go to state 53
    ID              shift and go to state 55
    CTEL            shift and go to state 56
    CTEF            shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59
